--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -79,9 +79,10 @@ hr {
     margin: 0;
 }
 #songs {
+    background-color: var(--bg-color);
     text-align: left;
 }
-#songs #artist {
+#artist {
     font-size: .8125rem;
     color: #aeaeae;
 }
@@ -91,6 +92,40 @@ hr {
 }
 .form-check-input:checked {
     background-color: var(--logo-blue);
+}
+#accordionParent {
+    background-color: var(--logo-blue);
+}
+.accordion-item {
+    background-color: var(--bg-color);
+    border-color: var(--logo-blue);
+    color: var(--text-color);
+}
+.accordion-button:focus {
+    border-color: var(--logo-blue);
+    box-shadow: none;
+}
+.accordion-button.collapsed {
+    /* background-color: rgb(82, 224, 250, .7); */
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+.accordion-button:not(.collapsed) {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23F8F9FA'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");;
+}
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23F8F9FA'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");;
+    color: var(--text-color);
+}
+.add-btn {
+    background-color: transparent;
+    border: none;
+    /* color: var(--bg-color); */
+    outline: none;
 }
 
 /* MOBILE DEFAULTS GO BELOW, EVERYTHING ELSE GOES OUTSIDE OF IT */
