--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -55,14 +55,20 @@
                     document.getElementById('desc').innerHTML = finalDesc;
                 </script> -->
             </div>
-            <div class="w-100">
-                <hr class="my-hr">
-            </div>
             {% if not all_tracks %}
+                <div class="w-100">
+                    <hr class="my-hr">
+                </div>
                 <div class="d-flex justify-content-center w-25">
                     <a class="btn btn-light my-btns" href="{{ url_for('playlister_search', id=id) }}">Add to this playlist</a>
                 </div>
             {% else %}
+                <div class="d-flex justify-content-center w-25">
+                    <a class="btn btn-light my-btns" href="{{ url_for('playlister_search', id=id) }}">Add to this playlist</a>
+                </div>
+                <div class="w-100">
+                    <hr class="my-hr">
+                </div>
                 <div class="d-flex flex-column w-50">
                     {% for track in all_tracks %}
                         <div class="d-flex flex-row" id="songs">
